[gd_scene load_steps=4 format=3 uid="uid://bjwqcbx7ohbxj"]

[ext_resource type="Script" path="res://ui/health_bar/health_bar.gd" id="1_guhp7"]
[ext_resource type="Texture2D" uid="uid://dp7vmblooq2j1" path="res://ui/health_bar/heart1.png" id="2_1eh6m"]
[ext_resource type="Texture2D" uid="uid://c3gav8engxxom" path="res://ui/health_bar/heart0.png" id="3_m50pj"]

[node name="HealthBar" type="Node2D"]
script = ExtResource("1_guhp7")
heart1 = ExtResource("2_1eh6m")
heart0 = ExtResource("3_m50pj")

[node name="Health1" type="Sprite2D" parent="."]
position = Vector2(32, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_1eh6m")

[node name="Health2" type="Sprite2D" parent="."]
position = Vector2(96, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_1eh6m")

[node name="Health3" type="Sprite2D" parent="."]
position = Vector2(160, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_1eh6m")
